spacing fixes

--- a/main.css
+++ b/main.css
@@ -172,12 +172,10 @@ header h2 {
 }
 
 .projects-section-title {
-  /*border-bottom: 1px solid #d6d3cb;*/
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 40px;
-  /*padding-bottom: 40px;*/
-  padding-left: 80px;
+  padding-left: 40px;
   width: 100%;
   color: #364D63;
 }
@@ -194,7 +192,7 @@ header h2 {
 }
 
 #projects div.content {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 
 div.project {
@@ -210,7 +208,7 @@ div.project {
 }
 
 .project-title {
-  margin-top: 60px;
+  margin-top: 50px;
   margin-bottom: 30px;
   text-align: center;
   font-size: 24px;
